fix too small tt-input of bootstrap taginput and adjust tag-input field width

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -51,7 +51,7 @@ body {
 /* } */
 
 .tt-input {
-    width: 500px;
+    width: 100% !important;
 }
 
 /* .tt-hint { */
